--- a/ResizeImageFromFolder/Properties/Resources.resx
+++ b/ResizeImageFromFolder/Properties/Resources.resx
@@ -121,7 +121,7 @@
   <data name="aV0g6i" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\aV0g6i.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="razor-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="razor_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\razor-logo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
